# Gemini-Clone

./: .gitignore  .replit  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  replit.nix
artifacts/api-server/: package.json
artifacts/api-server/src/routes/: index.ts
artifacts/api-server/src/routes/documents/: index.ts
artifacts/company-ai/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/company-ai/.replit-artifact/: artifact.toml
artifacts/company-ai/src/: App.tsx  index.css
artifacts/company-ai/src/components/: AlertsFeed.tsx  Layout.tsx  SimulationCanvas.tsx  StatsCards.tsx  chat-message.tsx  layout.tsx
artifacts/company-ai/src/context/: DetectionContext.tsx
artifacts/company-ai/src/hooks/: use-chat-stream.ts  useAlertSound.ts  useCamProcessor.ts  useLocalCamRelay.ts  useNotifications.ts  useSimulation.ts
artifacts/company-ai/src/pages/: AIPanel.tsx  AlertHistory.tsx  Dashboard.tsx  Settings.tsx  chat.tsx  knowledge-base.tsx
artifacts/company-ai/src/types/: index.ts
artifacts/mockup-sandbox/: vite.config.ts
attached_assets/: Pasted-Build-an-AI-chatbot-that-works-exactly-like-Gemini-same_1774580856999.txt  Pasted-CrowdLens-Functional-Audit-Critical-Features-are-comple_1775055745783.txt  Project_7_sem_code_1774951246067.docx
backend/: anomaly.py  config.py  crowdlens.db  crowdlens.db-shm  crowdlens.db-wal  database.py  detector.py  main.py  requirements.txt  simulation.py  sort_tracker.py
lib/api-spec/: openapi.yaml
lib/db/src/schema/: document_chunks.ts  documents.ts  index.ts
(+1 files in other folders)
