[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "filterpy>=1.4.5",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]
